Add gold perks listing chooser tab.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -7438,6 +7438,21 @@ body.with-listing-chooser {
                 border-left-color: lighten(#369, 25%);
             }
         }
+
+        &.gold-perks {
+            background: #fdfbf2;
+            a {
+                color: #9a7d2e;
+            }
+
+            &.selected {
+                border-color: lighten(#c4b487, 6%);
+
+                &:before {
+                    border-left-color: lighten(#9a7d2e, 15%);
+                }
+            }
+        }
     }
 
 
