--- a/r2/r2/templates/listingchooser.html
+++ b/r2/r2/templates/listingchooser.html
@@ -20,13 +20,11 @@
 ## reddit Inc. All Rights Reserved.
 ###############################################################################
 
+<%namespace file="utils.html" import="classes"/>
+
 <%def name="section_items(itemlist)">
   %for item in itemlist:
-    <li
-      %if item['selected']:
-        class="selected"
-      %endif
-      >
+    <li ${classes(item['extra_class'], 'selected' if item['selected'] else None)}>
       <a href="${item['path']}">
         ${item['name']}
         %if 'description' in item:
