--- a/r2/r2/templates/apihelp.html
+++ b/r2/r2/templates/apihelp.html
@@ -140,6 +140,9 @@
     or in the&#32;<code>Listing</code>&#32;structures of several other API
     calls.</p>
 
+    <p>The preferred way to send a modhash is to include an
+    &#32;<code>X-Modhash</code>&#32;custom HTTP header with your requests.</p>
+
     <h3 id="fullnames">fullnames</h3>
 
     <p>A fullname is a combination of a thing's type
