Allow users to enter desired budget or desired goal.
The fields are dependent (impressions = budget / cpm) so changing
one updates the other.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -4324,8 +4324,9 @@ ul.tabmenu.formtab {
 .campaign td.prefright { 
     padding: 4px;
 }
-.campaign #bid {
+.campaign #bid, .campaign #impressions {
     text-align: right;
+    width: auto;
 }
 .campaign .targeting, .campaign .notes {
     margin-left: 25px; 
