Gold partners: update iFixit logo / Rover title

--- a/r2/r2/templates/goldpartnerspage.html
+++ b/r2/r2/templates/goldpartnerspage.html
@@ -143,7 +143,7 @@
                    "Claim your code below, then sign up and enter it at http://rover.com/redditgoldmembers to redeem your $50 credit.",
                    static('gold/partner-rover.png'),
                    img_url='http://rover.com/redditgoldmembers',
-                   description_md='# Rover Dogsitting Service\n'
+                   description_md='# Rover.com Dog Boarding\n'
                                   'Dogsitting by dog lovers. $50 credit.',
                    extra_class='new',
                    button_dest='claim')}
