Add 'allowfullscreen' attribute to expando media embeds.

--- a/r2/r2/templates/mediaembed.html
+++ b/r2/r2/templates/mediaembed.html
@@ -26,4 +26,5 @@
 <iframe src="http://${thing.media_domain}/mediaembed/${thing.id36}"
         id="media-embed-${thing.id36}-${randstr(3)}" class="media-embed"
         width="${thing.width}" height="${thing.height}" border="0"
-        frameBorder="0" scrolling="${'auto' if thing.scrolling else 'no'}"></iframe>
+        frameBorder="0" scrolling="${'auto' if thing.scrolling else 'no'}"
+        allowfullscreen></iframe>
