Use correct selfserve wiki url.

--- a/r2/r2/templates/spotlightlisting.html
+++ b/r2/r2/templates/spotlightlisting.html
@@ -56,7 +56,7 @@
         <p>
           ${text_with_links(
             _("This sponsored link is an advertisement generated with our %(self_serve_advertisement_tool)s."),
-              self_serve_advertisement_tool=dict(link_text=_("self-serve advertisement tool"), path="http://www.reddit.com/wiki/selfservicepromotion")
+              self_serve_advertisement_tool=dict(link_text=_("self-serve advertisement tool"), path="http://www.reddit.com/wiki/selfserve")
           )}
         </p>
         <p>
