--- a/r2/r2/templates/promotelinkform.html
+++ b/r2/r2/templates/promotelinkform.html
@@ -467,6 +467,7 @@ ${self.javascript_setup()}
           ${_("You don't have any campaigns for this link yet.  You should add one.")}
         </p>
       </div>
+      <span class="freebie error"></span>
     </%utils:line_field>
   </div>
 </%def>
