Remove cup_info system and reimplement cake days more simply.
This removes a hardcache multi-lookup on every builder'd page and
simplifies the system for cake days.

Cups for the nightly "best *" awards are casualties of this, but they're
little known and probably won't be missed.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -766,6 +766,15 @@ ul.flat-vert {text-align: left;}
 .tagline .edited-timestamp{ cursor: default }
 .tagline .stickied-tagline { color: @moderator-color }
 
+.tagline .userattrs .cakeday {
+    display: inline-block;
+    text-indent: -9999px;
+    width: 11px;
+    height: 8px;
+    background-image: url(../cake.png); /* SPRITE */
+    vertical-align: middle;
+}
+
 a.author { margin-right: 0.5em; }
 
 .flair, .linkflairlabel {
