--- a/r2/r2/templates/promotelinkform.html
+++ b/r2/r2/templates/promotelinkform.html
@@ -70,6 +70,8 @@ ${unsafe(js.use('sponsored'))}
 
   ${thing.listing}
 
+  ${thing.infobar}
+
   <div class="create-promo">
     ${campaign_dashboard()}
 
