Add back minimum-spend div and fix styling.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -4274,6 +4274,11 @@ ul.tabmenu.formtab {
     color: gray;
 }
 
+.minimum-spend {
+    display: inline;
+    padding: 0 5px;
+}
+
 .prefright p.minimum-spend.error {
     font-weight: bold;
     color: red;
