Prepare for new subreddit stylesheet system.
This adds the necessary URL-generation stuff so that subreddits cut over
to the new stylesheet system will be rendered properly.

--- a/r2/r2/templates/frametoolbar.html
+++ b/r2/r2/templates/frametoolbar.html
@@ -36,6 +36,9 @@
   toolbar = new toolbar_p("${panel_size('expanded')}", "${panel_size('collapsed')}");
 </%def>
 
+<%def name="sr_stylesheets()">
+</%def>
+
 <%def name="bodyContent()">
   <div class="preload">
     ## everything in here will get rendered off screen for pre-fetching purposes.
