Gold partners: add link to /r/goldbenefits thread

--- a/r2/r2/public/static/css/goldinfo.less
+++ b/r2/r2/public/static/css/goldinfo.less
@@ -208,6 +208,12 @@ section#about-gold, section#about-gold-partners {
         }
     }
 
+    .discussion-link {
+        float: left;
+        font-size: 1.2em;
+        margin-top: 1em;
+    }
+
     .claim-code-button {
         .buy-gold-button;
 
