compressed links: Add class non-destructively.
For compressed links mode, augment the render class instead of replacing
it. This fixes an issue where compressed promoted links in self serve
listings didn't get the "promoted" class.

--- a/r2/r2/templates/printable.html
+++ b/r2/r2/templates/printable.html
@@ -106,7 +106,9 @@ ${self.RenderPrintable()}
       cls = thing.render_class.__name__.lower()
    else:
       cls = thing.lookups[0].__class__.__name__.lower()
-   
+
+   cls += ' ' + getattr(thing, 'extra_css_class', '')
+
    if getattr(thing, "is_self", False):
       selflink = "self"
    else:
