/dev/api: Add a note about modhashes on OAuth.

--- a/r2/r2/templates/apihelp.html
+++ b/r2/r2/templates/apihelp.html
@@ -143,6 +143,8 @@
     <p>The preferred way to send a modhash is to include an
     &#32;<code>X-Modhash</code>&#32;custom HTTP header with your requests.</p>
 
+    <p>Modhashes are not required when authenticated with OAuth.</p>
+
     <h3 id="fullnames">fullnames</h3>
 
     <p>A fullname is a combination of a thing's type
