VDate: rework to use earliest and latest rather than future and past.
More flexible and easier to understand.

--- a/r2/r2/templates/promotelinkform.html
+++ b/r2/r2/templates/promotelinkform.html
@@ -293,9 +293,9 @@ ${self.javascript_setup()}
               </%self:datepicker>
 
               ${error_field("BAD_DATE", "startdate", "div")}
-              ${error_field("BAD_FUTURE_DATE", "startdate", "div")}
+              ${error_field("DATE_TOO_EARLY", "startdate", "div")}
               ${error_field("BAD_DATE", "enddate", "div")}
-              ${error_field("BAD_FUTURE_DATE", "enddate", "div")}
+              ${error_field("DATE_TOO_EARLY", "enddate", "div")}
               ${error_field("BAD_DATE_RANGE", "enddate", "div")}
             </td>
           </tr>
