Show IDN on domain listings when appropriate.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -3950,6 +3950,18 @@ ul#image-preview-list .description pre {
 
 #sr-searchfield { margin: 0 5px; }
 
+#sr-name-box {
+    display: inline-block;
+    span {
+        display: block;
+        unicode-bidi: isolate;
+    }
+    .tooltip {
+        border-bottom: 1px dotted;
+        margin-bottom: 2px;
+    }
+}
+
 .sr-name {
     font-size: small;
     vertical-align: top;
