--- a/r2/r2/templates/pagenamenav.html
+++ b/r2/r2/templates/pagenamenav.html
@@ -20,7 +20,7 @@
 ## reddit Inc. All Rights Reserved.
 ###############################################################################
 
-<%namespace file="utils.html" import="plain_link"/>
+<%namespace file="utils.html" import="plain_link, _md"/>
 
 <%def name="subreddit()">
   <span class="hover pagename redditname">
@@ -29,6 +29,29 @@
       : ${thing.title}
     % endif
   </span>
+</%def>
+
+<%def name="domain()">
+  <div id="sr-name-box">
+    <span class="hover pagename redditname">
+      ${plain_link(getattr(c.site, "idn", c.site.name), c.site.path, _sr_path=False)}
+      % if hasattr(thing, "title"):
+        : ${thing.title}
+      % endif
+    </span>
+    % if hasattr(c.site, "idn"):
+    <span class="help help-hoverable tooltip">
+      ${c.site.name}
+      <div id="idn-help" class="hover-bubble help-bubble anchor-top">
+        <div class="help-section help-idn">
+          <p>
+            ${_md("This is an [internationalized domain name](http://en.wikipedia.org/wiki/Internationalized_domain_name).  We've modified how it is displayed [for security reasons](http://en.wikipedia.org/wiki/IDN_homograph_attack).")}
+          </p>
+        </div>
+      </div>
+    </span>
+    % endif
+  </div>
 </%def>
 
 <%def name="subreddits()">
