--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -962,29 +962,34 @@ a.author { margin-right: 0.5em; }
 
 .sitetable { list-style-type: none; }
 .ajaxhook { position: absolute; top: -1000px; left: 0px; }
-.nextprev { color: gray; font-size: larger; margin-top: 10px;}
 
-.nextprev a {
-    padding: 1px 4px;
-    background: #eee;
-    border: 1px solid #ddd;
-    border-radius: 3px;
-}
+.nextprev {
+    color: gray;
+    font-size: larger;
+    margin-top: 10px;
 
-.nextprev a:hover {
-    background: #f0f0f0;
-    border: 1px solid #82A6C9;
-}
+    a {
+        padding: 1px 4px;
+        background: #eee;
+        border: 1px solid #ddd;
+        border-radius: 3px;
+    }
 
-.nextprev a:active {
-    background: #e4e4e4;
-}
+    a:hover {
+        background: #f0f0f0;
+        border: 1px solid #82A6C9;
+    }
 
-.nextprev .separator {
-    margin: 0;
-    margin-left: .5em;
-    padding-left: .5em;
-    border-left: 1px solid #ccc;
+    a:active {
+        background: #e4e4e4;
+    }
+
+    .separator {
+        margin: 0;
+        margin-left: .5em;
+        padding-left: .5em;
+        border-left: 1px solid #ccc;
+    }
 }
 
 /* corner help */
